fix performance issues on mobile with pitch detection

--- a/client/src/pages/listening/listening.scss
+++ b/client/src/pages/listening/listening.scss
@@ -59,7 +59,8 @@ input {
   padding: 0;
   font-weight: bold;
   &.highlighted + label {
-    border-color: var(--green) !important;
+    border-color: var(--black) !important;
+    background-color: #C8DCBC;
   }
   &:focus {
     outline: none;
